# transcript

./: Cargo.toml  test.packed  test.script  test.unpacked  transcript.ini
language/: test.packed
language/src/file/: mod.rs  unpack.rs
language/src/translate/: mod.rs
language/src/utils/: logging.rs
src/: main.rs
src/executor/: environment.rs  mod.rs
src/file/: constants.rs  mod.rs  pack.rs
src/translate/: mod.rs  parse.rs  tokenizer.rs
src/utils/: config.rs  mod.rs
