[package]
name = "token_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
tini = "1.3"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
colored = "1.9.3"
